# ruiji

./: .gitignore  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
distpkg/gentoo/app-misc/ruiji/: Manifest  ruiji-0.6.ebuild
man/: meson.build  ruiji.1
src/: Makefile  animegallery.c  animegallery.h  animepictures.c  animepictures.h  config.def.h  config.mk  danbooru.c  danbooru.h  domains.h  eshuushuu.c  eshuushuu.h  gelbooru.c  gelbooru.h  helpers.c  helpers.h  interface.c  interface.h  konachan.c  konachan.h  mangadrawing.c  mangadrawing.h  meson.build  parser.c  parser.h  ruiji.c  sankakucomplex.c  sankakucomplex.h  structs.c  structs.h  udload.c  udload.h  util.c  util.h  yandere.c  yandere.h  zerochan.c  zerochan.h
